--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
-    <title>Vite + React + TS</title>
+    <title>Al's Website</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script style="height: 2000px" type="module" src="/src/main.tsx"></script>
   </body>
 </html>
